@@ -1,4 +1,5 @@
 SECTIONS {
+  .text : { *(.text) }
   .foo : { *(SORT_NONE(.foo)) }
   /DISCARD/ : { *(.*) }
 }
